dos/M1LocalControl0Controller/M1LocalControl0.h

/* External inputs (root inport signals with default storage) */
typedef struct {
  real_T Feedback[42];                 /* '<Root>/Feedback' */
} ExtU_M1LocalControl0_T;
/* External outputs (root outports fed by signals with default storage) */
typedef struct {
  real_T Output[2316];                 /* '<Root>/Output' */
} ExtY_M1LocalControl0_T;
/* External inputs (root inport signals with default storage) */
extern ExtU_M1LocalControl0_T M1LocalControl0_U;
/* External outputs (root outports fed by signals with default storage) */
extern ExtY_M1LocalControl0_T M1LocalControl0_Y;
/* Model entry point functions */
extern void M1LocalControl0_initialize(void);
extern void M1LocalControl0_step(void);
extern void M1LocalControl0_terminate(void);